# TrabalhoDSOO

./: README.md  pyproject.toml
controlador/: abstract_controlador.py  controlador_carrinho.py  controlador_cliente.py  controlador_funcionario.py  controlador_principal.py  controlador_produto.py
entidade/: carrinho.py  cliente.py  nota_fiscal.py  pessoa.py
tela/: abstract_tela.py  nota_fiscal.py  tela_carrinho.py  tela_cliente.py  tela_funcionario.py  tela_principal.py  tela_produto.py
